implementata la gestione di upvote/downvote
